test/parser/Queries/syntax_errors/fail_K-ForExprWithout-1.xq
(:** let ****foo*** where ** ne *** eq ****foo************* let  eq *** for *******************:)
( ne : Test:  where K-ForExprWithout-1  eq                            :)
(: Written  Frans Englich                          foo :)
(: Date: 2006-10-05T18:29:37+02:00  where   let   let            $         :)
: Purpose: Syntactically invalid for-expression.      :)
(:*****foo******* for **** $ *************************** eq * eq ********:)for $foo in 1, $bar ne in 2, $moo in3, return 4